# Delft3D-Toolbox

./: .gitignore  DepFile.py  GrdFile.py  LICENSE.md  MANIFEST.in  MdfFile.py  README.md  TimeSeriesFile.py  pyproject.toml  setup.py
delft3d/: DepFile.py  GrdFile.py  MdfFile.py  Simulation.py  TimeSeriesFile.py  __init__.py  config_d_hydro.xml
doc/: documentation.ipynb
doc/example/: dep_data.txt  example1.bct  example1.mdf  example2.dep  example2.grd  example3.grd  flow_series_A.csv  grd_x.txt  grd_y.txt
doc/example/dflow1/: f34.src  f34.url  f342.url  tri-diag.f34  tri-diag.f342  trih-f34.nc  trih-f342.def  trim-f34.nc
doc/example/dflow2/: f34.url  f342.url  tri-diag.f34  tri-diag.f342  trim-f34.def
example/: dep_data.txt  example1.grd  flow_series_B.csv
example/dflow1/: f34.ddb  f34.dis  f342.mdf
test/: Edited_river_test.bcc  Edited_river_test.bct  bcc_test.bcc  config_d_hydro_test.xml  config_test.ini  dep_test.dep  dep_test1.dep  dis_test.dis  grd_test1.grd  grd_test1_carX.txt  grd_test1_carY.txt  grd_test1_sphX.txt  grd_test1_sphY.txt  grd_test2.grd  mdf_test.mdf  run_test.bat  testSimulation.py  test_Delft3DFiles.py
test/dflow1/: f34.url  tri-diag.f34  trih-f34.nc  trim-f34.nc
test/dflow2/: f34.bca  f34.dep  f34.grd  f34.mdf  f342.url  tri-diag.f342  trih-f342.nc  trim-f342.nc
